# floppy-music

./: .gitmodules  Cargo.toml  README.md
floppy-music-cli/: Cargo.toml
floppy-music-cli/midi/: 20hoursaaarrrggghhh.mid_1664969030024.mid  At_the_Speed_of_Light_1665137441924.mid  Bobobmb_battlefield_High_1664875417904.mid  Bobobmb_battlefield_Low_1664875382462.mid  Bohemian_Rhapsody_2.mid_1665141222458.mid  Bonetroulse.mid  Bosun_Bill_High_1665136925321.mid  Bosun_Bill_Low_1665136896283.mid  Can_Can_High_1665136813818.mid  Carmen_Suite_No._1_Habanera_-_Bizet_1665135044946.mid  Chord.mid  Claire_de_lune_LOW_1665134266939.mid  Coconut_Mall_-High_1665137499736.mid  Coconut_Mall_Low_1665137536600.mid  DOOM_-_At_Hells_gate_WIP_1665147384039.mid  Deadlocked_Geometry_Dash_1665140661177.mid_1665140803127.mid  Debussy___Arabesque_No._1_1665134339492.mid  Dolphin Shoals.mid  Dragonborn_Theme.mid_1665140920517.mid  Fast_song_1665137379490.mid  Free-scores.com_bizet-georges-les-tora-adors-155329.midi  Gusty_Garden_high_1665057101975.mid  Hyrule_Temple__1665138175988.mid  I_Want_It_That_Way_v2_1665480311025.mid  Maiden_Voyage__1665137048477.mid  Mario Bros Theme Low.mid  Married_Life_1665138748829.mid  Monsters_inc_high.mid  Moonlight_Sonata_-_3rd_Movement_by_Beethoven_1665134421997.mid  Never_Gonna_Give_You_Up__-_Rick_Astley_1665147448594.mid  Peer_Gynt_Suite_No.1_Op.46_Morning_Mood_By_Edvard_Grieg_From_Art_Time_Classics_and_Baby_Noah_CD_1665135981371.mid  Pink_Panther_Theme_1664830452882.mid  Pink_panther_high_1664970747477.mid  Rasputin.mid  Rush_E_1665478979057.mid  Shboom__life_could_be_a_dream__1665479493009.mid_1665479900961.mid  Tetris Main Theme Low.mid  (+16 more)
floppy-music-middle/: Cargo.toml
(+21 files in other folders)
