[package]
name = "floppy-music-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
serialport = "4.2.0"
tokio-serial = "5.4.3"
midir = { version = "0.8.0", features = [] }
floppy-music-middle = { path = "../floppy-music-middle" }
midly = "0.5.2"
ctrlc = "3.2.3"
inquire = "0.3.0"
clap = { version = "3.2.18", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_auth = { version = "0.4.0", features = ["rusqlite"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket_contrib = "0.4.11"
notify = "5.0.0"
thiserror = "1.0.33"
tokio-stream = { version = "0.1.9", features = ["sync"] }
serde = "1.0.144"
toml = "0.5.9"
async-walkdir = "0.2.0"
anyhow = "1.0.65"
