[package]
name = "floppy-music-middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
serialport = "4.2.0"
tokio-serial = "5.4.3"
midir = { version = "0.8.0", features = [] }