[package]
name = "floppy-music-middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.23"
midly = "0.5.2"
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
